--- a/index.html
+++ b/index.html
@@ -7,23 +7,58 @@
   </head>
   <body>
     <video playsinline autoplay></video>
-    <button>Take snapshot</button>
+    <button>Snapshot</button>
     <canvas></canvas>
     <script>
     video = document.querySelector('video');
     canvas = document.querySelector('canvas');
     button = document.querySelector('button');
+    canvas.width=48;
+    canvas.height=48;
+    canvas.style.filter='grayscale(1)';
+    video.style.transform='scaleX(-1)';
+
+    span = document.querySelector('span');
+    span.style.fontSize='48px';
+    const LABELS = {
+        0: '🤬', // angry
+        1: '🤢', // disgust
+        2: '😱', // fear
+        3: '😄', // happy
+        4: '😢', // sad
+        5: '😲', // surprise
+        6: '😐' // neutral
+    }
+
+     async function predict() {
+        const model = await tf.loadLayersModel('./model/model.json');
+
+        image = tf.browser.fromPixels(canvas);
+        console.log(image);
+        image = image.toFloat().mean(2).mul(1/255.0).reshape([-1, 48, 48, 1]);
+        logits = model.predict(image);
+        const results = await logits.softmax().data();
+        i = results.indexOf(Math.max(...results));
+
+        image.dispose();
+        logits.dispose();
+        console.log(results);
+
+        span.innerHTML = LABELS[i];
+      }
 
     button.onclick = function() {
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        canvas.getContext('2d').drawImage(video, 0, 0, video.videoWidth, video.videoHeight);
-            mobilenet.load().then(model => {
-                model.classify(canvas).then(predictions => {
-        alert(predictions[0].className + ': ' + predictions[0].probability);
-        console.log(predictions);
-                });
-            });
+        w = video.videoWidth;
+        h = video.videoHeight;
+        s = Math.min(w,h);
+        sx = (w-s)/2;
+        sy = (h-s)/2;
+
+        canvas.getContext('2d').drawImage(video, sx=sx, sy=sy, swidth=s, sheight= s, x=0, y=0, width=48, height=48);
+
+        span.innerHTML = '⌛';
+        predict();
+
     };
 
     constraints = {
