--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
     <title>Demo</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"></script>
-  </head>
+	  </head>
   <body>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"></script>
+
     <video playsinline autoplay></video>
-    <button>Snapshot</button>
+    <button>Take snapshot</button>
     <canvas></canvas>
     <span>Your emoji</span>
 
@@ -33,6 +35,16 @@
         6: '😐' // neutral
     }
 
+    button.onclick = function() {
+        w = video.videoWidth;
+        h = video.videoHeight;
+        s = Math.min(w,h);
+        sx = (w-s)/2;
+        sy = (h-s)/2;
+        canvas.getContext('2d').drawImage(video, sx=sx, sy=sy, swidth=s, sheight= s, x=0, y=0, width=48, height=48);
+        span.innerHTML = '⌛';
+        predict();
+    };
      async function predict() {
         const model = await tf.loadLayersModel('./model/model.json');
 
@@ -49,20 +61,6 @@
 
         span.innerHTML = LABELS[i];
       }
-
-    button.onclick = function() {
-        w = video.videoWidth;
-        h = video.videoHeight;
-        s = Math.min(w,h);
-        sx = (w-s)/2;
-        sy = (h-s)/2;
-
-        canvas.getContext('2d').drawImage(video, sx=sx, sy=sy, swidth=s, sheight= s, x=0, y=0, width=48, height=48);
-
-        span.innerHTML = '⌛';
-        predict();
-
-    };
 
     constraints = {
       audio: false,
